--- a/style.css
+++ b/style.css
@@ -4,18 +4,23 @@
 
 }
 
-
-p {
+body {
     font-family: "JetBrains Mono";
-}    
+}
+
 
 h1 {
     color: #30528b;
-    font-family: "JetBrains Mono";
+    
 }
 a {
     color: #00996b;
 }
-h3 {
-    font-family: "JetBrains Mono";
+
+#notice {
+
+    position:fixed;
+    right: 100px;
+    top:120px
+    
 }
