--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "JetBrains Mono", sans-serif;
-    src: url('./JetBrainsMono[wght].ttf') format("opentype");
+    src: url('./JetBrainsMono-Regular.woff2') format("woff2");
 
 }
 
