--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 @font-face {
     font-family: "JetBrains Mono";
-    src: url('./JetBrainsMono-Regular.woff2');
+    src: url('./JetBrainsMono-Regular.woff2') format("woff2");
 
+}
+@font-face {
+    font-family: "Open Sans";
+    src: url('./Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf') format("truetype");
+    
 }
 
 body {
