--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
         color: #eff2ff;
         text-decoration:none;
     }
+    z-index: 4096;
     
 }
 #homepage {
@@ -98,6 +99,16 @@ body.dark {
     #dmbutton {
         content: url('./Button/Light Mode.png')
     }
+}
+
+.code-block {
+    background-color: #4B4B4B;
+    border: 1px solid #222;
+    border-radius: 4px;
+    padding: 15px;
+    font-family: 'JetBrains Mono';
+    white-space: pre;
+    overflow-x: auto;
 }
 
 
